# codegeneration

./: .gitignore  README.md  codegeneration.sh  config.yml  help.txt  pyproject.toml  tests.sh
codegeneration/: commands.py  config.py  lib.py  main.py  util.py
