[tool.poetry]
name = "CodeGeneration"
version = "0.1.0"
description = "AI Code Generation CLI"
authors = ["peter <petergolah@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
quickparse = "^0.9.1"
reploncli = "^0.9.2"
rich = "^13.2.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
pytest = "^7.1.2"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
